--- a/.github/workflows/sync-images.yml
+++ b/.github/workflows/sync-images.yml
@@ -1,4 +1,4 @@
-name: Sync Image to Aliyun  Example
+name: Sync Images to Aliyun
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2.2.0
       with:
-        registry: registry.cn-guangzhou.aliyuncs.com
+        registry: registry.cn-shanghai.aliyuncs.com
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_PASSWORD}}
         logout: false
