--- a/.github/workflows/sync-images.yml
+++ b/.github/workflows/sync-images.yml
@@ -32,6 +32,7 @@ jobs:
          skopeo copy docker://docker.io/mysql:8.4 docker://registry.cn-shanghai.aliyuncs.com/linkstar/mysql:8.4 && \
          skopeo copy docker://docker.io/php:8.3-alpine docker://registry.cn-shanghai.aliyuncs.com/linkstar/php:8.3-alpine && \
          skopeo copy docker://docker.io/databack/mysql-backup docker://registry.cn-shanghai.aliyuncs.com/linkstar/mysql-backup:latest
+         skopeo copy docker://docker.io/getmeili/meilisearch:latest docker://registry.cn-shanghai.aliyuncs.com/linkstar/meilisearch:latest
          
          
          
